--- a/src/component/car-customizer/CarCustom.css
+++ b/src/component/car-customizer/CarCustom.css
@@ -1,3 +1,11 @@
+body {
+  background: #333;
+  margin: 0;
+  display: grid;
+  padding: 3em;
+  place-items: center;
+}
+
 .boxes {
   display: grid;
   grid-gap: 2em;
@@ -9,6 +17,11 @@
   display: flex;
   flex-direction: column;
   min-height: 100%;
+}
+
+.box .image {
+  height: 128px;
+  width: 128px;
 }
 
 .box h1 {
